# odoo-crypto-addons

./: .copier-answers.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .style.yapf  README.md  pyproject.toml
account_accountant_crypto/: __manifest__.py
account_accountant_crypto/data/: menu.xml
crypto_kit/: __manifest__.py
crypto_kit/data/: menu.xml
crypto_kit/i18n/: fr.po
crypto_kit/models/: __init__.py  res_bank.py  res_currency.py
crypto_kit/security/: groups.xml
crypto_kit/views/: res_bank.xml  res_currency.xml
crypto_rate/: __manifest__.py
crypto_rate/data/: cron.xml
crypto_rate/i18n/: fr.po
crypto_rate/models/: res_currency.py
crypto_rate/security/: ir.model.access.csv
crypto_rate/views/: res_currency.xml
crypto_rate/wizards/: __init__.py  crypto_currency_rate_wizard.py  crypto_currency_rate_wizard.xml
crypto_rate_coingecko/: __manifest__.py
crypto_rate_coingecko/i18n/: fr.po
crypto_rate_coingecko/models/: res_currency.py
crypto_rate_coingecko/views/: res_currency.xml
crypto_sync/: __manifest__.py
crypto_sync/data/: actions.xml  config_parameter.xml  cron.xml  menu.xml
crypto_sync/i18n/: fr.po
crypto_sync/models/: __init__.py  account_bank_statement.py  account_bank_statement_line.py  account_journal.py  crypto_transaction.py  crypto_transaction_detail.py  crypto_transaction_source.py  res_partner_bank.py
crypto_sync/security/: ir.model.access.csv
crypto_sync_cosmos/: __manifest__.py
crypto_sync_etherscan/: __manifest__.py
crypto_sync_kraken/: __manifest__.py
crypto_sync_okx/: __manifest__.py
(+49 files in other folders)
