[tool.poetry]
name = "onsp_cryptocurrency"
version = "0.1.0"
description = ""
authors = ["Open Net Sàrl <support@open-net.ch>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2"
ruff = "^0.1"

[tool.ruff]
line-length = 120
include = ['crypto_kit/*.py', 'crypto_rate/*.py', 'crypto_rate_coingecko/*.py', 'crypto_sync/*.py', 'crypto_sync_etherscan/*.py', 'crypto_sync_kraken/*.py', 'account_accountant_crypto/*.py']

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # bandit
    "S",
]
ignore = [
    "E501",
    "E741", 
    "E731",
    "S602",
    "S607",
    "S608",
    "S107",
    "S101",
    "S113",
    "S701",
    "S105",
]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
